test/good/classes/method01.px

class Hello def
    func say(greeting: String): Void def
        print greeting

Hello().say("Hello!")
