test/bad/functions/name03.px

func function(): Void def
    skip

func function(): Void def
    skip
